--- a/Proyecto_ParteIII_AGUIRRE.ipynb
+++ b/Proyecto_ParteIII_AGUIRRE.ipynb
@@ -48,17 +48,20 @@
         "H4. Un modelo de clasificación será capaz de predecir con precisión el riesgo de ataque cardíaco en base a variables como edad, condiciones médicas previas, estilo de vida y acceso a la salud.\n",
         "\n",
         "**Análisis exploratorio de los datos**\n",
+        "\n",
         "En primer lugar se realiza un análisis exploratrio de los datos. El conjunto de datos esta compuesto por 10000 filas y 26 columnas.\n",
         "El mismo representa información médica, demográfica y de estilo de vida de pacientes de India. Se distinguen variables categóricas binarias, numéricas clínicas y variables ordinales.\n",
         "A continuación se presenta un diccionario de variables con la información tipo, una breve descripción de las mismas, rango/valores y, de corresponder, unidades.\n",
         "\n",
         "**Variables demográficas**\n",
+        "\n",
         "1. Patient_ID (Categórica): Identificador único de cada paciente.\n",
         "2. State_Name (Categórica): Estado o región de residencia dentro de India (ej: Tripura).\n",
         "3. Age (Numérica): Edad del paciente, en un rango de 20 a 79 años.\n",
         "4. Gender (Categórica): Sexo biológico, con valores posibles: \"Male\" o \"Female\".\n",
         "\n",
         "**Variables clínicas binarias**\n",
+        "\n",
         "Indicadores de condiciones de salud diagnosticadas (0: No, 1: Sí):\n",
         "1. Diabetes: Diagnóstico de diabetes.\n",
         "2. Hypertension: Hipertensión arterial.\n",
@@ -72,6 +75,7 @@
         "10. Air_Pollution_Exposure: Exposición significativa a contaminación del aire.\n",
         "\n",
         "**Variables clínicas numéricas**\n",
+        "\n",
         "Indicadores fisiológicos y de laboratorio, con sus respectivas unidades:\n",
         "1. Diet_Score (0-10 puntos): Calidad de la dieta (mayor puntaje = más saludable).\n",
         "2. Cholesterol_Level (mg/dL): Colesterol total.\n",
@@ -83,11 +87,13 @@
         "8. Stress_Level (0-10 puntos): Nivel percibido de estrés.\n",
         "\n",
         "**Variables de contexto y acceso a la salud**\n",
+        "\n",
         "1. Healthcare_Access (Categórica): Acceso a servicios de salud (0: No, 1: Sí).\n",
         "2. Emergency_Response_Time (Minutos): Tiempo promedio de respuesta en emergencias.\n",
         "3. Annual_Income (USD o equivalente): Ingresos anuales del paciente.\n",
         "\n",
         "**Variable objetivo**\n",
+        "\n",
         "1. Heart_Attack_Risk (Binaria): Etiqueta objetivo del modelo. Representa el riesgo predicho o diagnóstico de ataque cardíaco (0: Bajo, 1: Alto)."
       ],
       "metadata": {
@@ -232,8 +238,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"\\nDescripción de los datos: \\n\",\n",
-        "data.describe(include='all'))\n"
+        "print(\"\\nDescripción de los datos: \\n\",data.describe(include='all'))\n"
       ],
       "metadata": {
         "colab": {
@@ -338,8 +343,7 @@
       "cell_type": "code",
       "source": [
         "# Valores perdidos\n",
-        "print(\"\\nIdentificar valores perdidos:\\n\",\n",
-        "data.isnull().sum())"
+        "print(\"\\nIdentificar valores perdidos:\\n\",data.isnull().sum())"
       ],
       "metadata": {
         "colab": {
@@ -470,8 +474,7 @@
         "plt.title('Distribución del Riesgo de Ataque Cardíaco')\n",
         "for p in ax.patches:\n",
         "    height = p.get_height()\n",
-        "    ax.annotate(f'{height}', (p.get_x() + p.get_width() / 2., height),\n",
-        "                ha='center', va='bottom')\n",
+        "    ax.annotate(f'{height}', (p.get_x() + p.get_width() / 2., height), ha='center', va='bottom')\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1029,7 +1032,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Algunas características de las variables obtenidas a partir de los gráficos anteriores:\n",
+        "**Algunas características de las variables obtenidas a partir de los gráficos anteriores:**\n",
+        "\n",
         "1. Age: la distribución es bastante similar en ambos grupos, la mediana en la case de riesgo alto es levemente superior, eso nos dice que la edad podría ser un factor leve de riesgo pero no determinante por si sola.\n",
         "2. Diabetes y Hypertension: muestra valores extremos en ambos individuos.\n",
         "3. Obesity, Smoking, Alcohol_Consumption, Physical_Activity, Air_Pollution_Exposure y Family_History: muestran valores prácticamente idénticos entre las clases, no hay diferencia en la proporcion de personas con estos hábitos entre grupos de riesgo.\n",
@@ -1206,8 +1210,7 @@
         "\n",
         "# Gráfico\n",
         "plt.figure(figsize=(10, 6))\n",
-        "sns.barplot(data=data[data['Hypertension'] == 1], x='Gender', y='Heart_Attack_Risk', hue='Age_Group',\n",
-        "            errorbar=('ci', 95), palette='coolwarm')\n",
+        "sns.barplot(data=data[data['Hypertension'] == 1], x='Gender', y='Heart_Attack_Risk', hue='Age_Group', errorbar=('ci', 95), palette='coolwarm')\n",
         "plt.title('Riesgo de Infarto en Hipertensos por Género y Edad (IC 95%)')\n",
         "plt.xlabel('Género')\n",
         "plt.ylabel('Probabilidad de Riesgo')\n",
@@ -1319,7 +1322,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 851
+          "height": 852
         },
         "id": "aarHmJh8Pl2w",
         "outputId": "541d5749-d626-4ebd-c6a0-92753ebc8392"
@@ -2364,9 +2367,7 @@
         "# Mapa de calor para visualizar la correlación entre las variables numéricas\n",
         "plt.figure(figsize=(10,6))\n",
         "correlation_matrix = numeric_data.corr()\n",
-        "sns.heatmap(correlation_matrix,\n",
-        "    cmap='coolwarm'\n",
-        ")\n",
+        "sns.heatmap(correlation_matrix,cmap='coolwarm')\n",
         "plt.title('Matriz de Correlación')\n",
         "plt.show()"
       ],
@@ -2561,7 +2562,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 80
+          "height": 81
         },
         "id": "jY5YMNheg7l9",
         "outputId": "46d78bb2-f6b1-4487-d565-72cc47d0e7af"
@@ -3176,7 +3177,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 80
+          "height": 81
         },
         "id": "LezugTUbTCjy",
         "outputId": "18009787-ca12-4d32-d275-5b4e17667aa1"
